magpie 1.47
-----------
Support HDFS federation (experimental)
Support HADOOP_SLAVE_CORE_COUNT and SPARK_SLAVE_CORE_COUNT environment
  variables.

magpie 1.46
-----------
Support Spark wordcount test.
Various default submission file template cleanup.
- Remove Hadoop job info from Hbase & Spark + HDFS files
- Default MAGPIE_JOB_TYPE is now 'script'
msub-slurm scripts require MAGPIE_TIMELIMIT_MINUTES now, instead of SBATCH_TIMELIMIT.
Remove required configuration of SLURM_JOB_NAME in msub-slurm scriptts. 
Remove 'intellustre' and 'magpienetworkfs' config options from templates by default.

magpie 1.45
-----------
Support MAGPIE_ENVIRONMENT_VARIABLE_SCRIPT option.
Support HADOOP_NAMENODE_DAEMON_HEAP_MAX option.

magpie 1.44
-----------
Support 'upgradehdfs' HADOOP_MODE to update HDFS as you move to newer
 versions.
Support Storm 0.9.2.

magpie 1.43
-----------
Default Spark worker directory is now SPARK_LOCAL_DIR/work.
Make default Spark akka.threads is processor count / 2.
Update Magpie to support Spark 1.0.0.

magpie 1.42
-----------
Configure/output info on Spark job application dashboard.
Support configuration of number of slices for SparkPi test.

magpie 1.41
-----------
Fix bug in spark local scratch dir calculation.

magpie 1.40
-----------
Make default storm worker heap 1024.
Make default storm slots 50% of cores.

magpie 1.39
-----------
Support Storm in Magpie (Beta Support)

magpie 1.38
-----------
Rename 'testzookeeper' to 'zookeeperruok'

magpie 1.37
-----------
Support Zookeeper run mode and 'testzookeeper' sanity check job.
Support 'testall' job mode for basic testing/sanity checks.
Various documentation updates.

magpie 1.36
-----------
Re-arch Zookeeper code to be start/stop-able on the master node.

magpie 1.35
-----------
Support SPARK_LOCAL_SCRATCH_DIR_TYPE to indicate if
SPARK_LOCAL_SCRATCH_DIR points to a network drive or local drive.

magpie 1.34
-----------
Support Spark in Magpie

magpie 1.33
-----------