@@ -432,9 +432,10 @@ then
 	&& [ "${HADOOP_MODE}" != "script" ] \
 	&& [ "${HADOOP_MODE}" != "interactive" ] \
 	&& [ "${HADOOP_MODE}" != "upgradehdfs" ] \
-	&& [ "${HADOOP_MODE}" != "setuponly" ]
+	&& [ "${HADOOP_MODE}" != "setuponly" ] \
+	&& [ "${HADOOP_MODE}" != "hdfsonly" ]
     then
-	echo "HADOOP_MODE must be set to terasort, script, interactive, upgradehdfs, or setuponly"
+	echo "HADOOP_MODE must be set to terasort, script, interactive, upgradehdfs, setuponly, or hdfsonly"
 	exit 1
     fi
 
