@@ -3,6 +3,7 @@ magpie 1.47
 Support HDFS federation (experimental)
 Support HADOOP_SLAVE_CORE_COUNT and SPARK_SLAVE_CORE_COUNT environment
   variables.
+Support 'hdfsonly' option to HADOOP_MODE for clarity.
 
 magpie 1.46
 -----------
